# smtx

./: .gitignore  HISTORY  INSTALL  ISSUES  Makefile  Makefile,v  Makefile.am  README.rst  TODO  action.c  autogen.sh  bindings.c  config.def.h  configure.ac  coverage-test  cset.c  find-canvas-test.c  find-node-test.c  handler.c  main-test  main.c  main.h  mtm.c  show.c  smtx-main.c  smtx-test.c  smtx-test.h  smtx.c  smtx.h  smtx.ti  smtx.txt  sttm-main.c  sttm-test.c  sttm.c  sttm.h  sttm.ti  test-coverage  test-describe.c  test-main.c  test-shell  (+6 more)
.github/workflows/: c-cpp.yml
build-aux/: package-version
